--- a/docs/00_프로젝트_개요.md
+++ b/docs/00_프로젝트_개요.md
@@ -27,8 +27,8 @@
 2. **캐릭터 시스템** — 고양이·여우 중 선택, 배경·악세서리·스킨으로 꾸미기
 3. **아이템 수집** — 집중 완료 시 무료 가챠, 상점에서 코인으로 박스 구매
 4. **합성 시스템** — 같은 희귀도 아이템 10개 → 1개 합성(확률적 등급 변환)
-5. **친구방 (멀티플레이)** — 최대 10명 실시간 집중 현황 공유, 오늘의 집중 시간 랭킹
-6. **업적 시스템** — 10종 업적, 달성 시 코인 보상
+5. **친구방 (멀티플레이)** — 최대 10명 실시간 집중 현황 공유 및 **아바타(장착 아이템) 실시간 동기화**, 오늘의 집중 시간 랭킹
+6. **업적 시스템** — 10종 업적, 달성 시 코인 보상 (현재 속도/시간 관련 2종 미구현)
 7. **캘린더** — 집중 세션 히스토리 시각화
 8. **클라우드 저장** — 로그인 시 Supabase에 데이터 동기화, 미로그인 게스트 플레이 가능
 
@@ -41,10 +41,10 @@
 | 전체 | 기능 구현 완료, 폴리싱 단계 |
 | 타이머 | 완료 |
 | 캐릭터 / 꾸미기 | 완료 |
-| 아이템 (가챠/상점/인벤토리) | 완료 |
+| 아이템 (가챠/상점/인벤토리) | 완료 (순차적 Append 저장으로 안전성 강화) |
 | 합성 | 완료 |
-| 업적 | 일부 미구현 (`ach_speed`, `ach_scholar` 트리거 미연결 — 코드 확인 필요) |
-| 친구방 | 완료 |
+| 업적 | 완료 (`ach_speed`, `ach_scholar` 2종 한정 추후 구현 예정) |
+| 친구방 | 완료 (캐릭터 프로필 실시간 브로드캐스트 적용) |
 | 캘린더 | 완료 |
 | 클라우드 동기화 | 완료 |
 | 수익화 | 미적용 (현재 완전 무료) |
