--- a/docs/01_게임구성_및_IA.md
+++ b/docs/01_게임구성_및_IA.md
@@ -112,10 +112,12 @@
         → 업적 '소셜버터플라이' 달성
 
 [방 참여 후]
-  → 멤버 목록 (캐릭터, 닉네임, 타이머 상태, 오늘 집중 시간)
+  → 멤버 목록 (아바타 장착 아이템, 닉네임, 타이머 상태, 오늘 집중 시간)
   → 오늘 집중 시간 기준 실시간 랭킹
-  → 타이머 상태 실시간 브로드캐스트
+  → 타이머 상태 및 프로필 실시간 브로드캐스트
         - 타이머 시작/일시정지/완료 시 방 멤버에게 자동 전달
+        - 내가 방에 들어올 때 기존 멤버들에게 프로필 요청 (`request-profiles`)
+        - 누군가 아이템을 갈아입으면 즉시 방 전체에 아바타 동기화
   → [방 나가기]
 ```
 
@@ -150,7 +152,8 @@
 | 방 참여 후 | 멤버 랭킹 목록 (1위/2위/3위 메달), 방 나가기 버튼 |
 
 **멤버 카드 표시 정보**
-- 캐릭터 이미지 + 닉네임
+- `MiniAvatar` 컴포넌트: 기본 캐릭터 위 장착 중인 스킨, 악세서리, 배경 실시간 반영
+- 닉네임
 - 타이머 상태 도트 (회색=대기, 빨강=집중중, 노랑=일시정지, 초록=완료)
 - 활성 타이머 시 실시간 남은 시간
 - 오늘 총 집중 시간 (MM분 SS초)
