--- a/docs/04_기술_아키텍처.md
+++ b/docs/04_기술_아키텍처.md
@@ -237,12 +237,18 @@ interface RoomMember {
 | 액션 | 설명 |
 |------|------|
 | `createRoom(userId, nick, char, focusSec)` | 방 생성 + Supabase Realtime 구독 |
-| `joinRoom(code, userId, nick, char, focusSec)` | 방 참여 |
+| `joinRoom(code, userId, nick, char, focusSec)` | 방 참여 + 기존 멤버들에게 `request-profiles` 브로드캐스트 전송 |
 | `leaveRoom(userId)` | 방 나가기 (DB에서 멤버 삭제) |
-| `broadcastTimerStatus(userId, status)` | 타이머 상태 브로드캐스트 |
+| `updateMemberProfile(...)` | 자기자신의 상태 즉각 수정을 위한 로컬 업데이트 |
+| `requestProfileSync()` | 방 참여 시 호출하여 기존 멤버들의 현재 아바타 상태(장착 아이템)를 요청 |
+| `broadcastProfileUpdate(...)` | 캐릭터 변경 / 아이템 장착 시 방 멤버들에게 실시간 알림 |
+| `broadcastTimerStatus(userId, status)` | 시작/일시정지/완료 등 핵심 상태 브로드캐스트 |
 | `broadcastFocusSeconds(userId, seconds)` | 오늘 집중 시간 브로드캐스트 |
+| `broadcastTimerTick(...)` | 5초마다 남은 시간, 모드, 사이클 실시간 동기화용 브로드캐스트 |
 
-**실시간 동기화**: Supabase `postgres_changes` 이벤트 구독 (INSERT/UPDATE/DELETE on `room_members`)
+**실시간 동기화 방식의 이원화**: 
+1. **DB (postgres_changes)**: `timer_status` (시작, 일시정지 등), `focus_seconds_today`와 같은 지속성 정보 갱신 감지 (단, 잦은 DB 업데이트로 인한 프로필 데이터 덮어쓰기 방지를 위해 캐릭터/아이템 정보는 로컬/브로드캐스트 상태를 우선시함).
+2. **채널 Broadcast**: 초 단위의 타이머 남은 시간(`timer-tick`), 잦은 아이템 변경(`profile-update`), 입장 시점 동기화(`request-profiles`) 등 DB를 거치치 않는 고속 순수 실시간 데이터 동기화.
 
 ---
 
@@ -326,6 +332,10 @@ await Promise.all([
   fetchUserAchievements(userId), // 업적 현황
 ])
 ```
+
+### 5-3. 인벤토리 데이터 저장 (Race Condition 방지)
+- 상점 박스 연속 구매 시 데이터 유실을 막기 위해 **Append-Only (추가 전용)** 동기화 방식(`syncInventoryAppend`)을 사용
+- 로컬에서 추가된 새 아이템(Instance)만 찾아 비동기로 `INSERT` 처리하여 덮어쓰기 문제를 방지
 
 ### 5-3. 최초 로그인 처리
 
